--- a/index.html
+++ b/index.html
@@ -6,14 +6,22 @@
     <title>XKAI - Mëso më shumë rreth AI</title>
     <style>
         /* Stilet e Përgjithshme */
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(135deg, #1e3c72, #2a5298);
-            color: white;
-            line-height: 1.6;
-        }
+        * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+    background: linear-gradient(135deg, #1e3c72, #2a5298);
+    color: white;
+    line-height: 1.6;
+    max-width: 100%;
+    overflow-x: hidden; /* Parandalon scroll horizontal */
+}
 
         /* Header */
         header {
@@ -55,23 +63,22 @@
             animation: fadeIn 2.5s ease-in-out;
         }
 
-/* Butoni Call-to-Action */
- /* Butoni Call-to-Action */
-        .cta-button {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            margin-top: 20px;
-            padding: 15px 30px;
-            font-size: 1.1rem;
-            font-weight: bold;
-            color: #FFFFFF; /* Shkrim i bardhë i pastër */
-            background: linear-gradient(135deg, #0099ff, #0073e6); /* Gradient i ndritshëm blu */
-            text-decoration: none;
-            border-radius: 50px;
-            border: 2px solid #4db8ff; /* Kufizim i hollë që e bën më të dallueshëm */
-            box-shadow: 0 4px 8px rgba(0, 153, 255, 0.3);
-        }
+.cta-button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    padding: 15px 30px;
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: #FFFFFF !important; /* Siguron që shkrimi të jetë i bardhë */
+    background: linear-gradient(135deg, #00aaff, #0055ff); /* Ngjyra më e gjallë */
+    text-decoration: none;
+    border-radius: 50px;
+    border: 2px solid #4db8ff;
+    box-shadow: 0 4px 8px rgba(0, 153, 255, 0.3);
+    width: fit-content;
+}
 
         /* Seksioni Kryesor */
         main {
@@ -241,10 +248,15 @@
         }
 
         /* Responsiviteti */
-        @media (max-width: 600px) {
-            header h1 {
-                font-size: 2.5rem;
-            }
+/* Përmirësimi i responsivitetit në telefon */
+@media (max-width: 600px) {
+    .cta-button {
+        padding: 12px 24px;
+        font-size: 1rem;
+        width: 100%; /* Përshtatje më e mirë në mobile */
+        text-align: center;
+    }
+}
 
             header p {
                 font-size: 1.2rem;
